ansible/playbook-vagrant.yml: run playbook-all_nodes-install_semaphore.yml

--- a/ansible/playbook-vagrant.yml
+++ b/ansible/playbook-vagrant.yml
@@ -29,3 +29,6 @@
 
 - name: 'Run playbook-all_nodes-add_Branch_systemsmanagement_ansible_repo.yml'
   ansible.builtin.import_playbook: playbook-all_nodes-add_Branch_systemsmanagement_ansible_repo.yml
+
+- name: 'Run playbook-all_nodes-install_semaphore.yml'
+  ansible.builtin.import_playbook: playbook-all_nodes-install_semaphore.yml
