--- a/ansible/playbook-vagrant.yml
+++ b/ansible/playbook-vagrant.yml
@@ -22,3 +22,10 @@
 
 - name: 'Run playbook-all_nodes-minimal_bashrc.yml'
   ansible.builtin.import_playbook: playbook-all_nodes-minimal_bashrc.yml
+
+#
+# Semaphore
+#
+
+- name: 'Run playbook-all_nodes-add_Branch_systemsmanagement_ansible_repo.yml'
+  ansible.builtin.import_playbook: playbook-all_nodes-add_Branch_systemsmanagement_ansible_repo.yml
