ansible/playbook-vagrant.yml: run playbook-all_nodes-configure_and_start_semaphore.yml

--- a/ansible/playbook-vagrant.yml
+++ b/ansible/playbook-vagrant.yml
@@ -32,3 +32,6 @@
 
 - name: 'Run playbook-all_nodes-install_semaphore.yml'
   ansible.builtin.import_playbook: playbook-all_nodes-install_semaphore.yml
+
+- name: 'Run playbook-all_nodes-configure_and_start_semaphore.yml'
+  ansible.builtin.import_playbook: playbook-all_nodes-configure_and_start_semaphore.yml
